# PM_automata_tesztelo_hazik

./: Makefile  pyproject.toml
0509-mega-test-form/: test_mega_form.py
